// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<EuiFormRow
  label="Label position"
>
  <EuiSelect
    aria-label="Select label position"
    compressed={true}
    disabled={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "Top",
          "value": "TOP",
        },
        Object {
          "text": "Center",
          "value": "CENTER",
        },
        Object {
          "text": "Bottom",
          "value": "BOTTOM",
        },
      ]
    }
    value="TOP"
  />
</EuiFormRow>
`;

exports[`should render as disabled when label is not set 1`] = `
<DisabledToolTip
  content="Set 'Label' to enable"
>
  <EuiFormRow
    label="Label position"
  >
    <EuiSelect
      aria-label="Select label position"
      compressed={true}
      disabled={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Top",
            "value": "TOP",
          },
          Object {
            "text": "Center",
            "value": "CENTER",
          },
          Object {
            "text": "Bottom",
            "value": "BOTTOM",
          },
        ]
      }
      value="CENTER"
    />
  </EuiFormRow>
</DisabledToolTip>
`;

exports[`should render as disabled when label position is disabled 1`] = `
<DisabledToolTip
  content="simulated disabled error"
>
  <EuiFormRow
    label="Label position"
  >
    <EuiSelect
      aria-label="Select label position"
      compressed={true}
      disabled={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Top",
            "value": "TOP",
          },
          Object {
            "text": "Center",
            "value": "CENTER",
          },
          Object {
            "text": "Bottom",
            "value": "BOTTOM",
          },
        ]
      }
      value="CENTER"
    />
  </EuiFormRow>
</DisabledToolTip>
`;
